fixed the responsiveness of the last section on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -225,8 +225,9 @@ h2 {
 
 
 
-.weather-app-paragraph {
+.weather-app-paragraph, .apple-paragraph{
   margin-left: 30px;
+  font-size: 12px;
 }
 
 .second-home-subheading {
@@ -243,11 +244,9 @@ h2 {
   font-size: 25px;
 }
 
-.weather-app-paragraph {
-  font-size: 12px;
-}
 
-.weather-app-img {
+
+.weather-app-img, .apple-desktop {
   width: 200px;
   margin-top: -270px !important;
   margin-left: 180px;
@@ -259,6 +258,7 @@ h2 {
 
 .third-home-subheading {
   font-size: 28px;
+  margin-right: 60px;
 }
 
 .to-do-image {
@@ -275,7 +275,10 @@ h2 {
 
 
 
-
+.fourth-home-subheading {
+font-size: 28px;
+margin-left: 30px;
+}
 
 
 
